# anvil-engine

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/anvil_engine/: __init__.py
src/anvil_engine/factories/: __init__.py  character_factory.py  race_factory.py
src/anvil_engine/interfaces/: __init__.py  character_factory_interface.py  character_interface.py  race_factory_interface.py  race_interface.py
src/anvil_engine/models/: __init__.py  character.py  race.py
tests/: __init__.py  conftest.py
